--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -301,11 +301,9 @@ body{
   display: flex;
   align-items: center;
   gap: 0.8rem;
-  border: 1px solid rgba(255, 255, 255, 0.07);
-  background: rgba(6, 0, 16, 0.8);
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.15);
+  background: transparent;
   /* backdrop-filter removed for performance */
-  padding: 0.6em 0.8em 0.6em 0.6em;
+  padding: 0.3em 0.8em 0.6em 0.6em;
   border-radius: 50px;
   margin-bottom: 1.5rem;
   color: #ccc;
